<resources>
    <string name="app_name">MemoryGame</string>
    <string name="dashboard_button_start">Start</string>
    <string name="dashboard_button_history">History</string>
    <string name="global_leaderboard">Global Leaderboard</string>
    <string name="global_leaderboard_board3x4">Global Leaderboard - Board 3x4</string>
    <string name="global_leaderboard_board4x4">Global Leaderboard - Board 4x4</string>
    <string name="global_leaderboard_board6x6">Global Leaderboard - Board 6x6</string>
    <string name="personal_leaderboard">Personal Leaderboard</string>
    <string name="personal_leaderboard_board3x4">Personal Leaderboard - Board 3x4</string>
    <string name="personal_leaderboard_board4x4">Personal Leaderboard - Board 4x4</string>
    <string name="personal_leaderboard_board6x6">Personal Leaderboard - Board 6x6</string>
    <string name="dashboard_gameName">Memory Game</string>
    <string name="profilepicture">profilePicture</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="num_coins">5</string>
    <string name="image_coin">imageCoin</string>
    <string name="tresXquatroBoard">3x4 Board - Free</string>
    <string name="board3x4">3x4 Board</string>
    <string name="board4x4">4x4 Board</string>
    <string name="board6x6">6x6 Board</string>
    <string name="quatroXquatroBoard">4x4 Board - 1$</string>
    <string name="seisXseisBoard">6x6 Board - 1$</string>
    <string name="board_size">Board size</string>
    <string name="global_scoreboard_sizes">Global Scoreboard Sizes</string>
    <string name="personal_scoreboard_sizes">Personal Scoreboard Sizes</string>
    <string name="Time">Time:</string>
    <string name="Score">Score:</string>
    <string name="Attempts">Attempts:</string>
    <string name="celula1">celula1</string>
    <string name="celula2">celula2</string>
    <string name="celula3">celula3</string>
    <string name="celula4">celula4</string>
    <string name="celula5">celula5</string>
    <string name="celula6">celula6</string>
    <string name="celula7">celula7</string>
    <string name="celula8">celula8</string>
    <string name="celula9">celula9</string>
    <string name="celula10">celula10</string>
    <string name="celula11">celula11</string>
    <string name="celula12">celula12</string>
    <string name="celula13">celula13</string>
    <string name="celula14">celula14</string>
    <string name="celula15">celula15</string>
    <string name="celula16">celula16</string>
    <string name="celula17">celula17</string>
    <string name="celula18">celula18</string>
    <string name="celula19">celula19</string>
    <string name="celula20">celula20</string>
    <string name="celula21">celula21</string>
    <string name="celula22">celula22</string>
    <string name="celula23">celula23</string>
    <string name="celula24">celula24</string>
    <string name="celula25">celula25</string>
    <string name="celula26">celula26</string>
    <string name="celula27">celula27</string>
    <string name="celula28">celula28</string>
    <string name="celula29">celula29</string>
    <string name="celula30">celula30</string>
    <string name="celula31">celula31</string>
    <string name="celula32">celula32</string>
    <string name="celula33">celula33</string>
    <string name="celula34">celula34</string>
    <string name="celula35">celula35</string>
    <string name="celula36">celula36</string>
    <string name="image1">Image1</string>
    <string name="image2">Image2</string>
    <string name="image3">Image3</string>
    <string name="image4">Image4</string>
    <string name="image5">Image5</string>
    <string name="image6">Image6</string>
    <string name="image7">Image7</string>
    <string name="image8">Image8</string>
    <string name="image9">Image9</string>
    <string name="image10">Image10</string>
    <string name="image11">Image11</string>
    <string name="image12">Image12</string>
    <string name="image13">Image13</string>
    <string name="image14">Image14</string>
    <string name="image15">Image15</string>
    <string name="image16">Image16</string>
    <string name="image17">Image17</string>
    <string name="image18">Image18</string>
    <string name="image19">Image19</string>
    <string name="image20">Image20</string>
    <string name="image21">Image21</string>
    <string name="image22">Image22</string>
    <string name="image23">Image23</string>
    <string name="image24">Image24</string>
    <string name="image25">Image25</string>
    <string name="image26">Image26</string>
    <string name="image27">Image27</string>
    <string name="image28">Image28</string>
    <string name="image29">Image29</string>
    <string name="image30">Image30</string>
    <string name="image31">Image31</string>
    <string name="image32">Image32</string>
    <string name="image33">Image33</string>
    <string name="image34">Image34</string>
    <string name="image35">Image35</string>
    <string name="image36">Image36</string>
    <string name="Timer">00:00</string>
    <string name="AttemptText">0</string>
    <string name="ScoreText">0</string>
    <string name="hint">Hint</string>
    <string name="personal_scoreboard">Personal</string>
    <string name="global_scoreboard">Global</string>
    <string name="notifications">notifications</string>

    <string name="test_board_3x4">Test board 3x4</string>
    <string name="testboard3x4" />
    <string name="testboard_3x4">TestBoard 3x4</string>

    <string name="game_finished">Game Finished!</string>
    <string name="score">Score:</string>
    <string name="attempts">Attempts:</string>
    <string name="time">Time:</string>
    <string name="close">close</string>


    <string name="history_page">History</string>
    <string name="user">User</string>
    <string name="board">Board</string>
    <string name="textScoreBoard">-</string>
    <string name="user_column">User</string>
    <string name="score_column">Score</string>
    <string name="attempts_column">Attempts</string>
    <string name="time_column">Time</string>

    <string name="Time_Scoreboard">Time</string>
    <string name="dashboard_button_scoreboard">Scoreboard</string>


    <string name="error">ERROR!</string>

    <string name="warning">WARNING!</string>

    <string name="emptyFields">Empty fields! Write your username and password.</string>

    <string name="notEnoughCoins">Not enough coins!</string>

    <string name="invalidLogin">Invalid credentials! Please try again</string>

    <string name="leaveGame">Are you sure you want to leave the game?</string>

    <string name="leaveGame2">If you do that, you can not come back to this game again</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exclamationPoint">!</string>
    <string name="plus">+</string>
    <string name="buy_coins">Buy Coins</string>
    <string name="minus">-</string>
    <string name="minusText">-</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>

    <string name="MBWAY">MBWAY</string>
    <string name="VISA">VISA</string>
    <string name="IBAN">IBAN</string>
    <string name="PayPal">PayPal</string>
    <string name="MB">MB</string>

    <string name="mbway_info_title">MBWAY Payment Information</string>
    <string name="mbway_phone_number_hint">Enter phone number</string>
    <string name="mbway_submit_button_text">Submit</string>

    <string name="paypal_info_title">PayPal Payment Information</string>
    <string name="paypal_email_hint">Enter PayPal email</string>
    <string name="paypal_submit_button_text">Submit</string>

    <string name="iban_info_title">IBAN Payment Information</string>
    <string name="iban_number_hint">Enter IBAN number</string>
    <string name="iban_submit_button_text">Submit</string>

    <string name="mb_info_title">MB Payment Information</string>
    <string name="mb_reference_hint">Enter MB reference (hifen (-) added automatically)</string>
    <string name="mb_submit_button_text">Submit</string>

    <string name="visa_info_title">VISA Payment Information</string>
    <string name="visa_card_number_hint">Enter VISA card number</string>
    <string name="visa_submit_button_text">Submit</string>
    <string name="todo">TODO</string>


</resources>
