<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/system_accent2_100"
    tools:ignore="NewApi">


    <TextView
        android:id="@+id/IdTimeBoard3x4_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="left"
        android:text="@string/Time"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/timerTextViewBoard3x4_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/Timer"
        android:textColor="#000000"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/IdTimeBoard3x4_user"
        app:layout_constraintTop_toTopOf="@id/IdTimeBoard3x4_user"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/IdScoreBoard3x4_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="left"
        android:text="@string/Score"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:layout_constraintWidth_percent="0.28"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/attemptsTextBoard3x4_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:autoSizeTextType="uniform"
        android:gravity="left"
        android:text="@string/AttemptText"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toEndOf="@id/IdAttemptsBoard3x4_user"
        app:layout_constraintTop_toTopOf="@id/IdAttemptsBoard3x4_user"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/IdAttemptsBoard3x4_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="left"
        android:text="@string/Attempts"
        android:textColor="#020202"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:layout_constraintWidth_percent="0.38"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/scoreTextBoard3x4_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:autoSizeTextType="uniform"
        android:gravity="left"
        android:text="@string/ScoreText"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toEndOf="@id/IdScoreBoard3x4_user"
        app:layout_constraintTop_toTopOf="@id/IdScoreBoard3x4_user"
        app:layout_constraintWidth_percent="0.15" />


    <Button
        android:id="@+id/buttonHint_board3x4_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#77D6DB"
        android:fontFamily="serif"
        android:text="@string/hint"
        android:onClick="buyingThings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        app:layout_constraintWidth_percent="0.35" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/MemoryGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginTop="88dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694"
        app:layout_constraintWidth_percent="0.95"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView1Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:contentDescription="@string/image1"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula1"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1">

        </ImageView>

        <ImageView
            android:id="@+id/imageView2Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:clickable="true"
            android:contentDescription="@string/image2"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula2"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            tools:ignore="KeyboardInaccessibleWidget">

        </ImageView>

        <ImageView
            android:id="@+id/imageView3Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:clickable="true"
            android:contentDescription="@string/image3"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula3"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            tools:ignore="ImageContrastCheck">

        </ImageView>

        <ImageView
            android:id="@+id/imageView4Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:clickable="true"
            android:contentDescription="@string/image7"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula7"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1">

        </ImageView>

        <ImageView
            android:id="@+id/imageView5Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:clickable="true"
            android:contentDescription="@string/image8"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula8"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1">

        </ImageView>

        <ImageView
            android:id="@+id/imageView6Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:clickable="true"
            android:contentDescription="@string/image9"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula9"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"
            tools:ignore="ImageContrastCheck">

        </ImageView>

        <ImageView
            android:id="@+id/imageView7Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:clickable="true"
            android:contentDescription="@string/image13"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula13"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1">

        </ImageView>

        <ImageView
            android:id="@+id/imageView8Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:clickable="true"
            android:contentDescription="@string/image14"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula14"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1">

        </ImageView>

        <ImageView
            android:id="@+id/imageView9Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:clickable="true"
            android:contentDescription="@string/image15"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula15"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1">

        </ImageView>

        <ImageView
            android:id="@+id/imageView10Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:clickable="true"
            android:contentDescription="@string/image19"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula19"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/imageView11Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:clickable="true"
            android:contentDescription="@string/image20"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula20"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1">

        </ImageView>

        <ImageView
            android:id="@+id/imageView12Board3x4_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/design_default_color_error"
            android:clickable="true"
            android:contentDescription="@string/image21"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/celula21"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1">

        </ImageView>

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/num_coins"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif"
        android:text="@string/num_coins"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961"
        app:layout_constraintWidth_percent="0.06" />


    <ImageView
        android:id="@+id/image_coins_board6x6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_coin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961"
        app:layout_constraintWidth_percent="0.1"
        app:srcCompat="@drawable/coin_image" />

</androidx.constraintlayout.widget.ConstraintLayout>